src/test/deca/context/invalid/created/object/equals_int_A.deca
// Description :
//    test equals entre un int et un A
//
// Resultats :
//		Erreur contextuelle
//    	Ligne 11:  (3.71) Le membre gauche n'est pas de type 'class'
class A{}
{
int a;
A b;
int c = a.equals(b);
}
